--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-material-components/datetime-picker": "6.0.0",
-    "@angular-material-components/moment-adapter": "6.0.0",
+    "@angular-material-components/datetime-picker": "15.0.0",
+    "@angular-material-components/moment-adapter": "15.0.0",
     "@angular/animations": "^15.2.9",
     "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.9",
@@ -68,7 +68,7 @@
     "@angular/router": "^15.2.9",
     "@edium/fsm": "^2.1.2",
     "@hmcts/ccd-case-ui-toolkit": "5.0.14-angular11-upgrade",
-    "@hmcts/ccpay-web-component": "5.0.4",
+    "@hmcts/ccpay-web-component": "link:../ccpay-web-component/dist/payment-lib",
     "@hmcts/frontend": "0.0.50-alpha",
     "@hmcts/nodejs-healthcheck": "1.7.0",
     "@hmcts/properties-volume": "0.0.13",
@@ -77,9 +77,9 @@
     "@ng-idle/core": "^10.0.0",
     "@ng-idle/keepalive": "^10.0.0",
     "@ngrx/effects": "^11.1.1",
-    "@ngrx/router-store": "^11.1.1",
-    "@ngrx/store": "^11.1.1",
-    "@ngrx/store-devtools": "^11.1.1",
+    "@ngrx/router-store": "^15.2.1",
+    "@ngrx/store": "^15.2.1",
+    "@ngrx/store-devtools": "^15.2.1",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
     "@pact-foundation/pact": "^9.2.0",
     "@pact-foundation/pact-node": "^10.9.7",
@@ -127,6 +127,7 @@
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
+    "rpx-xui-translation": "0.1.6",
     "rx-polling": "^1.1.0",
     "rxjs": "^7.8.1",
     "rxjs-compat": "^6.4.0",
@@ -182,7 +183,7 @@
     "karma-spec-reporter": "0.0.34",
     "mocha": "^8.1.1",
     "mochawesome": "3.1.1",
-    "ng-packagr": "^15.2.2",
+    "ng-packagr": "^14.2.2",
     "ngrx-store-freeze": "^0.2.4",
     "nodemon": "^2.0.19",
     "pa11y": "^5.3.0",
@@ -203,8 +204,8 @@
     "ts-loader": "9.4.4",
     "ts-node": "10.8.1",
     "ts-node-dev": "^2.0.0-0",
-    "tslib": "^2.1.0",
-    "typescript": "4.8.2",
+    "tslib": "^2.6.1",
+    "typescript": "~4.8.2",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^4.9.4",
@@ -217,7 +218,8 @@
     "@stryker-mutator/html-reporter": "^3.0.1",
     "@stryker-mutator/karma-runner": "^3.0.1",
     "@stryker-mutator/mocha-runner": "^3.0.1",
-    "@stryker-mutator/typescript": "^4.0.0"
+    "@stryker-mutator/typescript": "^4.0.0",
+    "typescript": "4.8.2"
   },
   "packageManager": "yarn@3.6.1"
 }
