--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
+    "target": "es2020",
     "types": [
       "jasmine",
       "node"
