--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,13 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "module": "esnext",
+    "module": "es2020",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "ES2022",
+    "target": "es6",
     "importHelpers": true,
+    "skipLibCheck": true,
     "typeRoots": [
       "node_modules/@types"
     ],
