--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "rpa-pui-manager": {
+    "rpx-xui-manage-organisations": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -23,7 +23,7 @@
               "jwt-decode"
             ],
             "aot": true,
-            "outputPath": "dist/rpa-pui-manager",
+            "outputPath": "dist/rpx-xui-manage-organisations",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,31 +66,31 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "rpa-pui-manager:build",
+            "browserTarget": "rpx-xui-manage-organisations:build",
             "proxyConfig": "./proxy.config.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "rpa-pui-manager:build:production"
+              "browserTarget": "rpx-xui-manage-organisations:build:production"
             }
           }
         },
         "serveTest": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "rpa-pui-manager:build",
+            "browserTarget": "rpx-xui-manage-organisations:build",
             "proxyConfig": "./proxyTest.config.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "rpa-pui-manager:build:production"
+              "browserTarget": "rpx-xui-manage-organisations:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "rpa-pui-manager:build"
+            "browserTarget": "rpx-xui-manage-organisations:build"
           }
         },
         "test": {
@@ -100,6 +100,9 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
+            "include": [
+              "**/src/**/*.spec.ts"
+            ],
             "styles": [
               "src/styles.scss"
             ],
@@ -133,7 +136,7 @@
         }
       }
     },
-    "rpa-pui-manager-e2e": {
+    "rpx-xui-manage-organisations-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -141,11 +144,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "rpa-pui-manager:serveTest"
+            "devServerTarget": "rpx-xui-manage-organisations:serveTest"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "rpa-pui-manager:serve:production"
+              "devServerTarget": "rpx-xui-manage-organisations:serve:production"
             }
           }
         },
@@ -202,11 +205,9 @@
       }
     }
   },
-  "defaultProject": "gov-ui",
   "schematics": {
     "@schematics/angular:component": {
-      "style": "scss",
-      "styleext": "scss"
+      "style": "scss"
     }
   },
   "cli": {
