--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rpa-pui-manager",
+  "name": "rpx-xui-manage-organisations",
   "version": "0.0.0",
   "engines": {
     "node": ">=18.17.0"
@@ -17,11 +17,11 @@
     "lint:node": "yarn eslint api",
     "lint:test": "yarn eslint test",
     "ng": "ng",
-    "pre-push": "ng lint rpa-pui-manager && ng build --prod && ng test rpa-pui-manager --code-coverage",
+    "pre-push": "ng lint rpx-xui-manage-organisations && ng build --prod && ng test rpx-xui-manage-organisations --code-coverage",
     "publish-pact": "NODE_PATH=. LOG_LEVEL=error mocha -r ts-node/register api/test/pact/publish/*.ts --timeout 15000 --reporter spec",
     "rest-assured": "rest-assured",
     "sonar-scan": "node_modules/sonar-scanner/bin/sonar-scanner",
-    "start": "node ./dist/rpa-pui-manager/api/server.bundle.js",
+    "start": "node ./dist/rpx-xui-manage-organisations/api/server.bundle.js",
     "start:ng": "ng serve --port 3000 --host 0.0.0.0 --proxy-config proxy.config.json",
     "start:node": "cd api && yarn watch",
     "start:node:docker": "PUI_ENV=ldocker;cd api && yarn watch",
@@ -31,7 +31,7 @@
     "test:api": "ts-node ./test/integration/tests/test.ts",
     "test:can-i-deploy:consumer": "export VERSION=$(git rev-parse --short HEAD) && SSL_CERT_FILE=api/test/pact/cer/ca-bundle.crt pact-broker can-i-deploy --pacticipant 'xui_manageOrg' --version ${VERSION} --broker-base-url https://pact-broker.platform.hmcts.net",
     "test:coverage": "echo 'not implemented'",
-    "test:coverage:ng": "ng test rpa-pui-manager --code-coverage --watch",
+    "test:coverage:ng": "ng test rpx-xui-manage-organisations --code-coverage --watch",
     "test:coverage:node": "cd api && yarn coverage",
     "test:crossbrowser": "protractor ./test/e2e/config/crossbrowser.conf.js",
     "test:node": "cd api && yarn test",
@@ -42,7 +42,7 @@
     "test:fullfunctional:local": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/fullfunctional.conf.js --local",
     "test:mutation": "echo 'not implemented'",
     "test:mutation:fix": "NODE_ENV=development npx nyc stryker run stryker.node.conf.js ",
-    "test:ng": "ng test",
+    "test:ng": "ng test rpx-xui-manage-organisations",
     "test:ngIntegration": "yarn test:ngIntegrationMockEnv && ng e2e --protractorConfig=./test/ngIntegration/config/protractor.conf.js",
     "test:ngIntegrationMockEnv": "node -e 'require(`./test/nodeMock/availablePortFinder.js`).configureTestProxyPort()'",
     "test:node:watch": "cd api && yarn test:watch",
