--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
+    "rpx-xui-translation": "^0.1.1",
     "rx-polling": "^1.1.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
