--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "allure-js-commons": "^1.3.2",
     "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
+    "codeceptjs": "3.3.7",
     "codelyzer": "^5.1.2",
     "cross-env": "^7.0.2",
     "cucumber": "5.1.0",
