--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "mochawesome": "3.1.1",
     "ng-packagr": "^10.1.0",
     "ngrx-store-freeze": "^0.2.4",
+    "node-html-parser": "^6.1.5",
     "nodemon": "^1.18.9",
     "pa11y": "^5.3.0",
     "pa11y-reporter-html": "^2.0.0",
