--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "7.1.1",
     "codeceptjs": "3.3.7",
+    "codeceptjs-cucumber-json-reporter": "^1.0.11",
     "codelyzer": "^5.1.2",
     "cross-env": "^7.0.2",
     "cucumber": "5.1.0",
