--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "@hmcts/frontend": "0.0.50-alpha",
     "@hmcts/nodejs-healthcheck": "1.7.0",
     "@hmcts/properties-volume": "0.0.13",
-    "@hmcts/rpx-xui-common-lib": "1.8.7-fee-paid-filter-change",
-    "@hmcts/rpx-xui-node-lib": "2.25.12",
+    "@hmcts/rpx-xui-common-lib": "1.9.0-address-display-full",
+    "@hmcts/rpx-xui-node-lib": "2.27.1",
     "@ng-idle/core": "^10.0.0",
     "@ng-idle/keepalive": "^10.0.0",
     "@ngrx/effects": "^11.1.1",
@@ -111,6 +111,7 @@
     "govuk-frontend": "3.14.0",
     "govuk_frontend_toolkit": "^9.0.0",
     "helmet": "^3.21.3",
+    "http-proxy-middleware": "1.1.x",
     "isomorphic-fetch": "^3.0.0",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -123,14 +124,17 @@
     "ngx-md": "^12.0.0",
     "ngx-pagination": "^3.2.1",
     "node-fetch": "^2.6.1",
+    "node-http-proxy-json": "^0.1.9",
     "otp": "^0.1.3",
     "p-iteration": "^1.1.7",
     "redis": "^3.0.2",
+    "rpx-xui-translation": "^0.1.1",
     "rx-polling": "^1.1.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
     "session-file-store": "^1.2.0",
     "smoothscroll-polyfill": "^0.4.3",
+    "striptags": "^3.1.1",
     "xlsx": "^0.15.4",
     "zone.js": "~0.10.2"
   },
