--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test:functional": "yarn test:api && yarn run test:codeceptE2E",
     "test:functional:backup": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/functional.conf.js",
     "test:functional:local": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/functional.conf.js --local",
-    "test:fullfunctional": "yarn test:api && webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/fullfunctional.conf.js",
+    "test:fullfunctional": "yarn test:api && yarn run test:codeceptE2E",
     "test:fullfunctional:local": "webdriver-manager update --versions.chrome 2.40 && protractor ./test/e2e/config/fullfunctional.conf.js --local",
     "test:mutation": "echo 'not implemented'",
     "test:mutation:fix": "NODE_ENV=development npx nyc stryker run stryker.node.conf.js ",
